[tool.poetry]
name = "diffvg"
version = "0.1.0"
description = "Differentiable Rasterizer for Vector Graphics"
authors = ["Marco Lee <marco@goodnotesapp.com>"]
packages = [
    { include = "pydiffvg" },
    { include = "pydiffvg_tensorflow" }
]

[tool.poetry.dependencies]
python = ">=3.8"
pygame = "^2.0.1"
svgpathtools = "*"
cssutils = "^2.2.0"
scikit-image = "^0.19.3"
numpy = "^1.20.2"
torch = "^1.8.1"

[tool.poetry.group.dev.dependencies]
torchvision = "^0.11.3"
svgwrite = "^1.4.1"
numba = "^0.55.2"
torch-tools = "^0.1.5"
visdom = "^0.1.8"
cmake = "^3.18.4"

[build-system]
requires = ["poetry-core>=1.0.0a5", "setuptools", "wheel", "torch", "numpy", "cmake"]
build-backend = "setuptools.build_meta"
